Implemented the high scores board and UI, Added Documentation to the Model class, Implemented unit testing,  Added Checkstyle plugin,

--- a/src/main/resources/css/ui.css
+++ b/src/main/resources/css/ui.css
@@ -41,3 +41,10 @@
     -fx-font-weight: bold;
     -fx-padding: 5px;
 }
+
+.scoresLabel {
+    -fx-text-fill: #FFF;
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
+    -fx-padding: 10px;
+}
