--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="600.0" maxWidth="600.0" minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0" styleClass="borderpane" stylesheets="@../css/ui.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartController">
+<BorderPane maxHeight="650.0" maxWidth="600.0" minHeight="650.0" minWidth="600.0" prefHeight="650.0" prefWidth="600.0" styleClass="borderpane" stylesheets="@../css/ui.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartController">
    <center>
-      <VBox alignment="CENTER" maxHeight="282.0" prefHeight="150.0" prefWidth="600.0" styleClass="menu" stylesheets="@../css/ui.css" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" maxHeight="282.0" prefHeight="150.0" prefWidth="600.0" styleClass="menu" stylesheets="@../css/ui.css" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="playerOneTF" alignment="CENTER" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="30.0" prefWidth="400.0" promptText="Player 1" styleClass="player-text-field" stylesheets="@../css/ui.css">
                <VBox.margin>
@@ -34,14 +34,19 @@
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </padding>
             </Button>
+            <Button fx:id="scoreSheet" layoutX="250.0" layoutY="148.0" mnemonicParsing="false" onAction="#openSheet" prefHeight="30.0" prefWidth="120.0" styleClass="menu-button" stylesheets="@../css/ui.css" text="Scores Sheet">
+               <padding>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </padding>
+            </Button>
          </children>
          <BorderPane.margin>
-            <Insets bottom="80.0" />
+            <Insets bottom="120.0" />
          </BorderPane.margin>
       </VBox>
    </center>
    <top>
-      <ImageView fitHeight="121.0" fitWidth="247.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fitHeight="170.0" fitWidth="303.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
             <Image url="@../images/logo.png" />
          </image>
