--- a/src/main/resources/fxml/scoreUI.fxml
+++ b/src/main/resources/fxml/scoreUI.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ScoreController">
+<AnchorPane prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stonestactoe.controllers.ScoreController">
    <children>
       <BorderPane prefHeight="650.0" prefWidth="600.0" styleClass="borderpane" stylesheets="@../css/ui.css">
          <center>
